<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.daniel.tmdbsampleapp.AddEditMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="start|center"
            android:text="@string/subject" />

        <EditText
            android:id="@+id/et_movie_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.75"
            android:background="@drawable/bg_border"
            android:gravity="start|center"
            android:hint="@string/insert_movie_title"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/body" />

        <EditText
            android:id="@+id/et_movie_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.9"
            android:background="@drawable/bg_border"
            android:gravity="start|top"
            android:hint="@string/insert_movie_description"
            android:padding="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/url" />

        <EditText
            android:id="@+id/et_movie_image_url"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:background="@drawable/bg_border"
            android:hint="@string/insert_movie_image_url"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/btn_show"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/button_click"
            android:gravity="center"
            android:text="@string/show"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:weightSum="1">

        <ImageView
            android:id="@+id/iv_movie_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/button_click"
            android:text="@string/ok"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/button_click"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>
